# tidepredictor

./: .dockerignore  .gitignore  404.html  Dockerfile  Makefile  README.md  getting-started.html  getting-started.ipynb  index.html  index.ipynb  mkdocs.yml  objects.inv  profile.html  profile.ipynb  pyproject.toml  search.json
.github/workflows/: docs.yml  full_test.yml  python_publish.yml
api/: CurrentPredictor.html  CurrentPredictor.ipynb  LevelPredictor.html  LevelPredictor.ipynb  NetCDFConstituentRepository.html  NetCDFConstituentRepository.ipynb  PredictionType.html  PredictionType.ipynb  UtideAdapter.html  UtideAdapter.ipynb  adapters.html  data.html  get_default_constituent_path.html  get_default_constituent_path.ipynb  index.html  index.ipynb  utide.html
docs/: .gitignore  _quarto.yml  getting-started.qmd  getting_started.md  index.md  index.qmd  objects.json  profile.qmd  reference.md
getting_started/: index.html
notebooks/: Bathymetry.ipynb  Constituents.ipynb  Utide.ipynb  land.py  mike_vs_utide.py  semidiurnal.py  workflow.py
reference/: index.html
scripts/: coef.py  coef_dataclass.py  convert_current_constituents.py  convert_elevation_constituents.py  predict.sh  predict_averaged_currents_from_pfs.py  predict_from_pfs.py  test_A.pfs  utide_minimal_coefs.py
tests/: test_basic.py  test_current.py  test_data.py  test_level.py
tests/adapters/: test_utide.py
tests/cli/: test_cli.py
tests/data/: GlobalTideCurrent_DTU-TPXO8_2min_v1_test.nc  GlobalTideElevation_DTU-TPXO8_2min_v1_UpperCase_test.nc  currents.nc  elevation.nc  level.nc  tide_currents.dfs0  tide_level.dfs0
tidepredictor/: __init__.py  data.py  main.py  utide.py
tidepredictor/_utide/: __init__.py  coef.toml
tidepredictor/adapters/: __init__.py  protocol.py  utide.py
tidepredictor/prediction/: __init__.py  coef.py  current.py  level.py
tidepredictor/utide/: __init__.py  coef.toml
