[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# location of package relative to the repository root (e.g. alternatively "src/tidepredictor")
# note: the package name 'tidepredictor' can be different from the project name on PyPI
#       the project name (PyPI) is used for pip install, whereas the package name is used for imports
packages = ["tidepredictor"]  

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests", "images"]

[project]
# name on PyPI (e.g. pip install tidepredictor)
name = "tidepredictor"
version = "0.0.1"
dependencies = [
    "ipykernel>=6.29.5",
    "netcdf4>=1.7.2",
    "numpy",
    "polars==1.17.1",
    "setuptools>=75.6.0",
    "typer>=0.15.1",
    "utide==0.3.0",
    "xarray>=2024.11.0",
]

authors = [
  { name="First Last", email="initials@dhigroup.com" },
]
description = "Useful library"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
tidepredictor = "tidepredictor.main:app"


[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "ruff",
  "mypy",
  "mkdocs",
  "mkdocstrings[python]", 
  "mkdocs-material"
]

test= [
  "pytest",
  "pytest-cov",
  "mypy",
]

notebooks = [
  "jupyter",
]

[project.urls]
"Homepage" = "https://github.com/DHI/tidepredictor"
"Bug Tracker" = "https://github.com/DHI/tidepredictor/issues"

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.48",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.27.0",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]


[tool.ruff]
# ignore long lines
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unreachable = false
no_implicit_optional = true
