[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tidepredictor"]  

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests", "images"]

[project]
name = "tidepredictor"
version = "0.0.1"
dependencies = [
    "numpy>=2.2.1",
    "netcdf4>=1.7.2",
    "polars>=1.17.1",
    "setuptools", # used by utide
    "typer>=0.15.1",
    "toml>=0.10.2",
    "utide==0.3.0",
    "xarray==2024.11.0",
]

authors = [
  { name="Henrik Andersson", email="jan@dhigroup.com" },
]
description = "Predict tidal levels and currents"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
tidepredictor = "tidepredictor.main:app"


[project.urls]
"Homepage" = "https://github.com/DHI/tidepredictor"
"Bug Tracker" = "https://github.com/DHI/tidepredictor/issues"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "matplotlib>=3.10.0",
    "plotly>=5.24.1",
    "marimo>=0.10.2",
    "folium>=0.19.2",
    "pre-commit>=4.0.1",
    "ipykernel>=6.29.5",
]

docs = [
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "plotly>=6.0.0",
    #"quarto-cli>=1.6.40",
    "quartodoc>=0.9.1",
]

test= [
  "pytest",
  "pytest-cov",
  "mypy==1.13.0",
  "mikeio",
]


[tool.ruff.lint]
# ignore long lines
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = true
warn_return_any = false
allow_redefinition = true
warn_unreachable = true
disallow_untyped_defs = true
